Replace hero background scenes with spaceship and restyle theme toggle

--- a/index.html
+++ b/index.html
@@ -39,48 +39,30 @@
       href="/portfolio/brand-icon-180.png?v=20260215v22"
     />
     <link rel="manifest" href="/portfolio/site.webmanifest?v=20260215v22" />
-    <link rel="stylesheet" href="/portfolio/styles.css?v=20260216v54" />
+    <link rel="stylesheet" href="/portfolio/styles.css?v=20260216v60" />
   </head>
   <body data-theme="dark">
     <div class="bg-orb orb-a" aria-hidden="true"></div>
     <div class="bg-orb orb-b" aria-hidden="true"></div>
     <div class="scroll-scenes" aria-hidden="true">
-      <div class="scroll-scene scene-batman">
-        <div class="comic-stage bat-stage">
-          <div class="bat-moon"></div>
-          <div class="bat-signal"></div>
-          <div class="bat-art-wrap">
-            <div class="batman-css-art">
-              <div class="bat-mouth"></div>
-              <div class="bat-eye"></div>
-              <div class="bat-cape"></div>
-              <div class="bat-leg"></div>
-              <div class="bat-costume"></div>
-              <div class="bat-belt"></div>
+      <div class="scroll-scene scene-space">
+        <div class="space-stage">
+          <div class="space-stars"></div>
+          <div class="space-nebula nebula-a"></div>
+          <div class="space-nebula nebula-b"></div>
+          <div class="space-planet planet-a"></div>
+          <div class="space-planet planet-b"></div>
+          <div class="space-flight">
+            <div class="ship-trail"></div>
+            <div class="spaceship">
+              <div class="ship-cockpit"></div>
+              <div class="ship-body"></div>
+              <div class="ship-wing wing-top"></div>
+              <div class="ship-wing wing-bottom"></div>
+              <div class="ship-fin"></div>
+              <div class="ship-engine"></div>
+              <div class="ship-thruster"></div>
             </div>
-            <div class="bat-base"></div>
-          </div>
-        </div>
-      </div>
-
-      <div class="scroll-scene scene-superman">
-        <div class="comic-stage sup-stage">
-          <div class="sup-sun"></div>
-          <div class="sup-skyline"></div>
-          <div class="super-art-wrap">
-            <div class="superman-css-art">
-              <div class="sup-head"></div>
-              <div class="sup-hair"></div>
-              <div class="sup-cape"></div>
-              <div class="sup-torso"></div>
-              <div class="sup-emblem"></div>
-              <div class="sup-belt"></div>
-              <div class="sup-arm arm-left"></div>
-              <div class="sup-arm arm-right"></div>
-              <div class="sup-leg leg-left"></div>
-              <div class="sup-leg leg-right"></div>
-            </div>
-            <div class="sup-landing"></div>
           </div>
         </div>
       </div>
@@ -110,18 +92,9 @@
           aria-pressed="false"
         >
           <span class="theme-toggle-track" aria-hidden="true">
-            <span class="theme-stars">
-              <span class="star star-a"></span>
-              <span class="star star-b"></span>
-              <span class="star star-c"></span>
-              <span class="star star-d"></span>
-            </span>
-            <span class="theme-clouds">
-              <span class="cloud cloud-a"></span>
-              <span class="cloud cloud-b"></span>
-              <span class="cloud cloud-c"></span>
-            </span>
-            <span class="theme-toggle-thumb"></span>
+            <span class="theme-toggle-label theme-label-light">LIGHT<br />MODE</span>
+            <span class="theme-toggle-label theme-label-dark">DARK<br />MODE</span>
+            <span class="theme-toggle-thumb"><span class="theme-toggle-icon"></span></span>
           </span>
         </button>
       </nav>
