Restore spaceship background scene and re-enable scene layer

--- a/index.html
+++ b/index.html
@@ -39,11 +39,34 @@
       href="/portfolio/brand-icon-180.png?v=20260215v22"
     />
     <link rel="manifest" href="/portfolio/site.webmanifest?v=20260215v22" />
-    <link rel="stylesheet" href="/portfolio/styles.css?v=20260216v65" />
+    <link rel="stylesheet" href="/portfolio/styles.css?v=20260216v66" />
   </head>
   <body data-theme="dark">
     <div class="bg-orb orb-a" aria-hidden="true"></div>
     <div class="bg-orb orb-b" aria-hidden="true"></div>
+    <div class="scroll-scenes" aria-hidden="true">
+      <div class="scroll-scene scene-space">
+        <div class="space-stage">
+          <div class="space-stars"></div>
+          <div class="space-nebula nebula-a"></div>
+          <div class="space-nebula nebula-b"></div>
+          <div class="space-planet planet-a"></div>
+          <div class="space-planet planet-b"></div>
+          <div class="space-flight">
+            <div class="ship-trail"></div>
+            <div class="spaceship">
+              <div class="ship-cockpit"></div>
+              <div class="ship-body"></div>
+              <div class="ship-wing wing-top"></div>
+              <div class="ship-wing wing-bottom"></div>
+              <div class="ship-fin"></div>
+              <div class="ship-engine"></div>
+              <div class="ship-thruster"></div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
 
     <header class="site-header reveal">
       <a class="brand" href="#top">
